# aoc-cpp

./: .clang-format  .clang-tidy  .clangd  .env.json.example  .gitignore  CMakeLists.txt  README.md  a.out  compile_commands.json  flake.nix  guh.diff  perf.data  test.cpp
scripts/: new-day.ts
src/: CMakeLists.txt
src/2024/: CMakeLists.txt
src/2024/day1/: CMakeLists.txt  main.cpp
src/2025/: CMakeLists.txt
src/2025/day1/: CMakeLists.txt  main.cpp
src/2025/day2/: CMakeLists.txt  main.cpp
src/2025/day3/: CMakeLists.txt  main.cpp
src/common/: Base.cpp  Base.hpp  CMakeLists.txt  sanity.test.cpp
src/common/util/: CMakeLists.txt  PairView.cpp  PairView.hpp  fs.cpp  fs.hpp  functional.hpp  iter.hpp  math.hpp  math.test.cpp  string.cpp  string.hpp  string.test.cpp  time.cpp  time.hpp  types.hpp
src/common/util/2d/: CMakeLists.txt  Coord.hpp  Edge.hpp  Grid.hpp  Quadrant.hpp
src/common/util/debug/: CMakeLists.txt  ColoredString.cpp  ColoredString.hpp  ColoredString.test.cpp  TerminalCode.hpp
src/common/util/iter/: CMakeLists.txt  all.hpp  any.hpp  filter.hpp  flat.hpp  flatMap.hpp  fold.hpp  iota.hpp  joinToString.hpp  map.hpp  none.hpp  split.hpp  split.test.cpp  sum.hpp  take.hpp  tap.hpp
src/common/util/string/: CMakeLists.txt  pad.hpp  pad.test.cpp  split.hpp  split.test.cpp  trim.hpp  trim.test.cpp
